mbaas-developer-preview/sample-spring-apps/fraud/02--service--fraud.yaml
## Copyright (c) 2022, Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: v1
kind: Service
metadata:
  name: fraud
  namespace: application
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: fraud
