mbaas-developer-preview/sample-spring-apps/fraud/03--ingress--fraud.yaml
## Copyright (c) 2022, Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-ingress
  namespace: application
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/backend-protocol: "https"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  tls:
  - secretName: ssl-certificate-secret
  rules:
  - http:
      paths:
      - path: /fraud(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: fraud
            port:
              number: 8081
